# anvil

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: tests.yml
src/: main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  ServiceManager.cpp  ServiceManager.h
src/managers/: ProcessManager.cpp  ProcessManager.h  SiteManager.cpp  SiteManager.h  VersionManager.cpp  VersionManager.h
src/models/: PHPVersion.cpp  PHPVersion.h  Service.cpp  Service.h  Site.cpp  Site.h
src/services/: BaseService.cpp  BaseService.h  DatabaseService.cpp  DatabaseService.h  DnsService.cpp  DnsService.h  NginxService.cpp  NginxService.h  NodeService.cpp  NodeService.h  PHPService.cpp  PHPService.h
src/tests/integration/: test_filesystem_integration.cpp  test_integration.cpp  test_integration_2.cpp  test_process_executor_integration.cpp  test_process_manager.cpp  test_version_manager.cpp
src/tests/unit/: test_php_version.cpp  test_site.cpp
src/ui/: MainWindow.cpp  MainWindow.h  Theme.cpp  Theme.h  resources.qrc
src/utils/: DistroDetector.cpp  DistroDetector.h  FileSystem.cpp  FileSystem.h  Logger.cpp  Logger.h  Network.cpp  Network.h  Process.cpp  Process.h
